--- a/final4/prj.conf
+++ b/final4/prj.conf
@@ -1,2 +1,10 @@
+CONFIG_PRINTK=y
+CONFIG_HEAP_MEM_POOL_SIZE=1024
+CONFIG_ASSERT=y
 CONFIG_GPIO=y
-CONFIG_HEAP_MEM_POOL_SIZE=1024  
+CONFIG_SERIAL=y
+CONFIG_UART_INTERRUPT_DRIVEN=y
+CONFIG_THREAD_ANALYZER=y
+CONFIG_THREAD_ANALYZER_RUN_UNLOCKED=y
+CONFIG_THREAD_NAME=y
+CONFIG_THREAD_ANALYZER_USE_PRINTK=y
